<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Question 1-->
        <TextView
            android:id="@+id/q1_label"
            style="@style/QuestionTextView"
            android:text="@string/q1_label" />

        <CheckBox
            android:id="@+id/cb0_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:textSize="18sp"
            tools:text="..." />

        <CheckBox
            android:id="@+id/cb0_b"
            style="@style/CheckBoxMetrics" />

        <CheckBox
            android:id="@+id/cb0_c"
            style="@style/CheckBoxMetrics" />

        <CheckBox
            android:id="@+id/cb0_d"
            style="@style/CheckBoxMetrics" />

        <TextView
            android:id="@+id/q1_warning"
            style="@style/WarningTextViews"/>

        <!-- Question 2-->
        <TextView
            android:id="@+id/q2_label"
            style="@style/QuestionTextView"
            android:text="@string/q2_label" />

        <RadioGroup
            android:id="@+id/rad_grp_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb0_a"
                style="@style/RadioButtonMetrics"
                tools:text="HTML" />

            <RadioButton
                android:id="@+id/rb0_b"
                style="@style/RadioButtonMetrics"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb0_c"
                style="@style/RadioButtonMetrics"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb0_d"
                style="@style/RadioButtonMetrics"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/q2_warning"
            style="@style/WarningTextViews" />


        <!-- Question 3-->
        <TextView
            android:id="@+id/q3_label"
            style="@style/QuestionTextView"
            android:text="@string/q3_label" />

        <EditText
            android:id="@+id/edit_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/edit_lang_hint"
            android:singleLine="true"
            android:textSize="18sp"
            tools:text="J/K" />

        <TextView
            android:id="@+id/q3_warning"
            style="@style/WarningTextViews" />


        <!-- Question 4-->
        <TextView
            android:id="@+id/q4_label"
            style="@style/QuestionTextView"
            android:text="@string/q4_label" />

        <CheckBox
            android:id="@+id/cb1_a"
            style="@style/CheckBoxMetrics"
            tools:text="J2ME" />

        <CheckBox
            android:id="@+id/cb1_c"
            style="@style/CheckBoxMetrics"
            tools:text="Linux" />

        <CheckBox
            android:id="@+id/cb1_b"
            style="@style/CheckBoxMetrics"
            tools:text="Mac" />

        <TextView
            android:id="@+id/q4_warning"
            style="@style/WarningTextViews" />


        <!-- Question 5-->
        <TextView
            android:id="@+id/q5_label"
            style="@style/QuestionTextView"
            android:text="@string/q5_label" />

        <RadioGroup
            android:id="@+id/rad_grp_ide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb1_a"
                style="@style/RadioButtonMetrics" />

            <RadioButton
                android:id="@+id/rb1_b"
                style="@style/RadioButtonMetrics" />

            <RadioButton
                android:id="@+id/rb1_c"
                style="@style/RadioButtonMetrics" />

        </RadioGroup>

        <TextView
            android:id="@+id/q5_warning"
            style="@style/WarningTextViews" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit_text" />

    </LinearLayout>

</ScrollView>